styles.css
/* ... */
@media screen and (max-width: 810px) {
  .nav-links a {
    font-size: 14px;
  }
  .main-left {
    background: black;
    width: 100%;
  }

  .logo {
    width: 300px;
  }

  .album {
    align-items: center;
    margin: 0px;
    padding: 10px;
    display: grid;
    grid-template-rows: 2fr 1fr;
    justify-content: space-around;
    width: 150px;
    height: 300px;
  }
  .album iframe {
    grid-row: 1/2;
    width: 150px !important;
    height: 150px;
    padding: 0;
    margin: 0;
  }
  .about-content {
    font-size: 12px;
    font-family: "Lato" !important;
    margin: 20px 0;
    color: white;
    letter-spacing: 2px;
    line-height: 23px;
  }
}

@media screen and (max-width: 600px) {
  .site-container {
    width: auto;
    display: flex;
  }

  .main-left {
    width: 300%;
  }

  .nav-links {
    width: 100%;
    /* padding: 0; */
    margin: 0;
  }

  .nav-links a {
    /* padding: 0; */
    margin: 0;
  }

  .site-content {
    align-items: center;
    justify-content: center;
    zoom: 0.8;
    -moz-transform: scale(0.8);
  }
  .album-grid {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    /* height: 100%; */
    flex-grow: column;
  }

  .album {
    align-items: center;
    margin: 0px;
    padding: 10px;
    display: grid;
    grid-template-rows: 2fr 1fr;
    justify-content: space-around;
    width: 290px;
    height: 400px;
  }
  .album iframe {
    grid-row: 1/2;
    width: 290px !important;
    height: 290px;
    padding: 0;
    margin: 0;
  }
}

